k8sw4/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gossip-statefulset
spec:
  serviceName: "bcgossip-svc"
  replicas: 6  # Start with 2 replicas for testing
  selector:
    matchLabels:
      app: bcgossip
  template:
    metadata:
      labels:
        app: bcgossip
      annotations:
        kubernetes.io/ingress-bandwidth: 5M    # Limit the inbound bandwidth of the pod.
        kubernetes.io/egress-bandwidth: 5M
    spec:
      containers:
        - name: gossip-node
          image: wwiras/gpbc4:v1  # Replace with your Docker image name
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: topology-config
