k8sw4/statefulset2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gossip-statefulset
spec:
  serviceName: "bcgossip-svc"
  replicas: 6
  selector:
    matchLabels:
      app: bcgossip
  template:
    metadata:
      labels:
        app: bcgossip
        istio-injection: enabled  # Add this line
    spec:
      containers:
        - name: gossip-node
          image: wwiras/gpbc4:v1
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: topology-config
